--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://192.168.1.175:3306/gps_main?useUnicode=true&characterEncoding=utf-8
 #spring.datasource.username=ZDZCAPP
 #spring.datasource.password=zdzc@2016
-spring.datasource.url=jdbc:mysql://rm-bp1bnya92i3f45h33o.mysql.rds.aliyuncs.com:3306/gps_main?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://rm-bp1bnya92i3f45h33o.mysql.rds.aliyuncs.com:3306/gps_main
 spring.datasource.username=zdzcjcfw
 spring.datasource.password=zdzc@2017
 
