--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+		<!--druid-->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.1.5</version>
+		</dependency>
+
 		<!--mysql connector-->
 		<dependency>
 			<groupId>mysql</groupId>
