--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 		<!--spring test-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
