--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -79,4 +79,10 @@ dao.package=com.zdzc.electrocar.mapper
 xml.mapper.package=com.zdzc.electrocar.mapper
 mapper.plugin=tk.mybatis.mapper.generator.MapperPlugin
 
+#相邻坐标上传时间大于该值(10分钟)的点，会在地图上显示，单位：毫秒
+parkerInterval=600000
+
+#高德web服务端秘钥
+gaodeWebServerKey=261b9ce89ab991fc23a481974ad6b881
+
 
