--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#Ö÷Êý¾ÝÔ´£¬Ä¬ÈÏÖµ
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ô´ï¿½ï¿½Ä¬ï¿½ï¿½Öµ
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.datasource.url=jdbc:mysql://rm-bp1bnya92i3f45h33o.mysql.rds.aliyuncs.com:3306/gps_main?useUnicode=true&characterEncoding=utf-8
@@ -23,7 +23,7 @@ spring.datasource.password=zdzc@2017
 
 
 
-#ÆäËûÊý¾ÝÔ´
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ô´
 custom.datasource.names=gps_1,gps_alarm_1
 custom.datasource.gps_1.driver-class-name=com.mysql.jdbc.Driver
 custom.datasource.gps_1.url=jdbc:mysql://rm-bp1bnya92i3f45h33o.mysql.rds.aliyuncs.com:3306/gps_1
@@ -70,13 +70,13 @@ server.port=10008
 #mapper.mappers=com.zdzc.electrocar.base.MyMapper
 mybatis.type-aliases-package=com.zdzc.electrocar.entity
 #mapper.Mapper=com.zdzc.electrocar.base.MyMapper
-model.package=com.zdzc.electrocar.entity
+model.package=com.zdzc.electrocar.entity, com.zdzc.dataClear.entity
 mapper.not-empty=false
 mapper.identity=MYSQL
 target.project=src/main/java
 target.resources=src/main/resources
-dao.package=com.zdzc.electrocar.mapper
-xml.mapper.package=com.zdzc.electrocar.mapper
+dao.package=com.zdzc.electrocar.mapper, com.zdzc.dataClear.mapper
+xml.mapper.package=com.zdzc.electrocar.mapper, com.zdzc.dataClear.mapper
 mapper.plugin=tk.mybatis.mapper.generator.MapperPlugin
 
 
