--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -52,5 +52,6 @@ log4j.logger.java.sql.PreparedStatement=DEBUG
 log4j.logger.org.mybatis.generator=INFO,DEBUG
 
 log4j.logger.com.zdzc.electrocar=DEBUG,INFO
+log4j.logger.com.zdzc.dataClear=DEBUG,INFO
 
 
