修改日志打印格式，数据清理记录日志

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,37 +4,37 @@ log4j.rootLogger=INFO,ERROR,CONSOLE,DEBUG,A1
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.Threshold=INFO,DEBUG
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd-HH-mm} [%t] [%c] [%p] - %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] [%c] [%p] - %m%n
 
 log4j.logger.INFO=INFO
 log4j.appender.INFO=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.INFO.layout=org.apache.log4j.PatternLayout
-log4j.appender.INFO.layout.ConversionPattern=%d{yyyy-MM-dd-HH-mm} [%t] [%c] [%p] - %m%n
+log4j.appender.INFO.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] [%c] [%p] - %m%n
 log4j.appender.INFO.datePattern='.'yyyy-MM-dd
 log4j.appender.INFO.Threshold = info
 log4j.appender.INFO.append=true
 #log4j.appender.info.File=/home/admin/pms-api-services/logs/info/api_services_info
-log4j.appender.INFO.File=/logs/info/api_services_info
+log4j.appender.INFO.File=/logs/bspapi/info/api_services_info
 
 log4j.logger.ERROR=ERROR
 log4j.appender.ERROR=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.ERROR.layout=org.apache.log4j.PatternLayout
-log4j.appender.ERROR.layout.ConversionPattern=%d{yyyy-MM-dd-HH-mm} [%t] [%c] [%p] - %m%n
+log4j.appender.ERROR.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] [%c] [%p] - %m%n
 log4j.appender.ERROR.datePattern='.'yyyy-MM-dd
 log4j.appender.ERROR.Threshold = error
 log4j.appender.ERROR.append=true
 #log4j.appender.error.File=/home/admin/pms-api-services/logs/error/api_services_error
-log4j.appender.ERROR.File=/logs/error/api_services_error
+log4j.appender.ERROR.File=/logs/bspapi/error/api_services_error
 
 log4j.logger.DEBUG=DEBUG
 log4j.appender.DEBUG=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.DEBUG.layout=org.apache.log4j.PatternLayout
-log4j.appender.DEBUG.layout.ConversionPattern=%d{yyyy-MM-dd-HH-mm} [%t] [%c] [%p] - %m%n
+log4j.appender.DEBUG.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] [%c] [%p] - %m%n
 log4j.appender.DEBUG.datePattern='.'yyyy-MM-dd
 log4j.appender.DEBUG.Threshold = DEBUG
 log4j.appender.DEBUG.append=true
 #log4j.appender.DEBUG.File=/home/admin/pms-api-services/logs/debug/api_services_debug
-log4j.appender.DEBUG.File=/logs/debug/api_services_debug
+log4j.appender.DEBUG.File=/logs/bspapi/debug/api_services_debug
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
@@ -54,4 +54,12 @@ log4j.logger.org.mybatis.generator=INFO,DEBUG
 log4j.logger.com.zdzc.electrocar=DEBUG,INFO
 log4j.logger.com.zdzc.dataClear=DEBUG,INFO
 
-
+##自定义数据清理日志
+log4j.logger.com.zdzc.dataClear.schedule.ClearTablesSchedule=INFO, MY_DATA_CLEAR_LOG
+log4j.appender.MY_DATA_CLEAR_LOG=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.MY_DATA_CLEAR_LOG.File=/logs/bspapi/dataClear/dataClear
+log4j.appender.MY_DATA_CLEAR_LOG.Encoding=utf-8
+log4j.appender.MY_DATA_CLEAR_LOG.DatePattern='.'yyyy-MM-dd'.log'
+log4j.appender.MY_DATA_CLEAR_LOG.append=true
+log4j.appender.MY_DATA_CLEAR_LOG.layout=org.apache.log4j.PatternLayout
+log4j.appender.MY_EXCEPTION_HANDLER.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] [%c] [%p] - %m%n
