增加卫星图标准图切换功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -79,7 +79,7 @@ dao.package=com.zdzc.electrocar.mapper
 xml.mapper.package=com.zdzc.electrocar.mapper
 mapper.plugin=tk.mybatis.mapper.generator.MapperPlugin
 
-#相邻坐标上传时间大于该值(10分钟)的点，会在地图上显示，单位：毫秒
+#停车间隔，相邻坐标上传时间大于该值(10分钟)的点，会在地图上显示，单位：毫秒
 parkerInterval=600000
 
 #高德web服务端秘钥
