修改表清理逻辑，整合websocket模块

--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,18 @@
 			<version>4.1.0</version>
 		</dependency>
 
+		<!-- SpringWebSocket依赖 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
+		<!-- 引入security模块 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
