--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -63,3 +63,13 @@ log4j.appender.MY_DATA_CLEAR_LOG.DatePattern='.'yyyy-MM-dd'.log'
 log4j.appender.MY_DATA_CLEAR_LOG.append=true
 log4j.appender.MY_DATA_CLEAR_LOG.layout=org.apache.log4j.PatternLayout
 log4j.appender.MY_EXCEPTION_HANDLER.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] [%c] [%p] - %m%n
+
+##数据库超限报警
+log4j.logger.com.zdzc.websocket.controller.WebSocketController=INFO, WEB_SOCKET_ALARM_PUSH_LOG
+log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.File=/logs/bspapi/dbAlarmPush/dbAlarmPush
+log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.Encoding=utf-8
+log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.DatePattern='.'yyyy-MM-dd'.log'
+log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.append=true
+log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.layout=org.apache.log4j.PatternLayout
+log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] [%c] [%p] - %m%n
