--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -69,7 +69,7 @@ log4j.logger.com.zdzc.websocket.controller.WebSocketController=INFO, WEB_SOCKET_
 log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.File=/logs/bspapi/dbAlarmPush/dbAlarmPush
 log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.Encoding=utf-8
-log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.DatePattern='.'yyyy-MM-dd'.log'
+log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.DatePattern='.'yyyy-MM'.log'
 log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.append=true
 log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.layout=org.apache.log4j.PatternLayout
 log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] [%c] [%p] - %m%n
