--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -64,7 +64,7 @@ log4j.appender.MY_DATA_CLEAR_LOG.append=true
 log4j.appender.MY_DATA_CLEAR_LOG.layout=org.apache.log4j.PatternLayout
 log4j.appender.MY_EXCEPTION_HANDLER.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] [%c] [%p] - %m%n
 
-##数据库超限报警
+##数据库超限报警日志
 log4j.logger.com.zdzc.websocket.controller.WebSocketController=INFO, WEB_SOCKET_ALARM_PUSH_LOG
 log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.File=/logs/bspapi/dbAlarmPush/dbAlarmPush
@@ -73,3 +73,13 @@ log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.DatePattern='.'yyyy-MM'.log'
 log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.append=true
 log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.layout=org.apache.log4j.PatternLayout
 log4j.appender.WEB_SOCKET_ALARM_PUSH_LOG.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] [%c] [%p] - %m%n
+
+#数据库备份与还原日志
+log4j.logger.com.zdzc.dataClear.util.DataHandle=INFO, DB_BACKUP_REVERT
+log4j.appender.DB_BACKUP_REVERT=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.DB_BACKUP_REVERT.File=/logs/bspapi/dbBackupRevert/dbBackupRevert
+log4j.appender.DB_BACKUP_REVERT.Encoding=utf-8
+log4j.appender.DB_BACKUP_REVERT.DatePattern='.'yyyy-MM'.log'
+log4j.appender.DB_BACKUP_REVERT.append=true
+log4j.appender.DB_BACKUP_REVERT.layout=org.apache.log4j.PatternLayout
+log4j.appender.DB_BACKUP_REVERT.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] [%c] [%p] - %m%n
