数据库备份参数化配置，备份目录若不存在则创建文件夹

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,11 +24,19 @@ mapper.plugin=tk.mybatis.mapper.generator.MapperPlugin
 spring.http.multipart.max-file-size=100MB
 spring.http.multipart.max-request-size=100MB
 
-#停车间隔，相邻坐标上传时间大于该值(10分钟)的点，会在地图上显示，单位：毫秒
+#\u0363\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u03F4\uFFFD\u02B1\uFFFD\uFFFD\uFFFD\uFFFD\u06B8\uFFFD\u05B5(10\uFFFD\uFFFD\uFFFD\uFFFD)\uFFFD\u0135\u38EC\uFFFD\uFFFD\uFFFD\u06B5\uFFFD\u037C\uFFFD\uFFFD\uFFFD\uFFFD\u02BE\uFFFD\uFFFD\uFFFD\uFFFD\u03BB\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 parkerInterval=600000
 
-#高德web服务端秘钥
+#\uFFFD\u07F5\uFFFDweb\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u053F
 gaodeWebServerKey=261b9ce89ab991fc23a481974ad6b881
 
 spring.profiles.active=dev
+
+#\u6570\u636E\u5E93\u5907\u4EFD\u914D\u7F6E\u53C2\u6570
+dbBackUp.hostName = 127.0.0.1
+dbBackUp.userName = root
+dbBackUp.passwd = 123456
+dbBackUp.sourceDbName = gps_main
+dbBackUp.destinationPath = C:\\dbBackUp
+
 
