--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,10 +24,10 @@ mapper.plugin=tk.mybatis.mapper.generator.MapperPlugin
 spring.http.multipart.max-file-size=100MB
 spring.http.multipart.max-request-size=100MB
 
-#\u0363\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u03F4\uFFFD\u02B1\uFFFD\uFFFD\uFFFD\uFFFD\u06B8\uFFFD\u05B5(10\uFFFD\uFFFD\uFFFD\uFFFD)\uFFFD\u0135\u38EC\uFFFD\uFFFD\uFFFD\u06B5\uFFFD\u037C\uFFFD\uFFFD\uFFFD\uFFFD\u02BE\uFFFD\uFFFD\uFFFD\uFFFD\u03BB\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
+#\u4E24\u4E2A\u76F8\u90BB\u8F68\u8FF9\u70B9\u4E4B\u95F4\u7684\u65F6\u95F4\u95F4\u9694\uFF0C\u8D85\u8FC7\u8BE5\u503C\uFF0C\u6253\u4E0A\u505C\u8F66\u6807\u8BB0\uFF0C\u5355\u4F4D\u6BEB\u79D2
 parkerInterval=600000
 
-#\uFFFD\u07F5\uFFFDweb\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u053F
+#\u9AD8\u5FB7\u5730\u56FE web \u670D\u52A1\u7AEF key
 gaodeWebServerKey=261b9ce89ab991fc23a481974ad6b881
 
 spring.profiles.active=dev
