--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-#主数据源，默认值
+#\u4E3B\u8868
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.datasource.url=jdbc:mysql://rm-bp1bnya92i3f45h33o.mysql.rds.aliyuncs.com:3306/gps_main?useUnicode=true&characterEncoding=utf-8
@@ -23,7 +23,7 @@ spring.datasource.password=zdzc@2017
 
 
 
-#其他数据源
+#\u8F68\u8FF9\u8868\uFF0C\u62A5\u8B66\u8868
 custom.datasource.names=gps_1,gps_alarm_1
 custom.datasource.gps_1.driver-class-name=com.mysql.jdbc.Driver
 custom.datasource.gps_1.url=jdbc:mysql://rm-bp1bnya92i3f45h33o.mysql.rds.aliyuncs.com:3306/gps_1
