数据库备份功能配置信息修改

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,5 +17,9 @@ custom.datasource.gps_alarm_1.url=jdbc:mysql://rm-bp1bnya92i3f45h33.mysql.rds.al
 custom.datasource.gps_alarm_1.username=zdzcjcfw
 custom.datasource.gps_alarm_1.password=zdzc@2017
 
-
-
+#\u6570\u636E\u5E93\u5907\u4EFD\u914D\u7F6E\u53C2\u6570
+dbBackUp.hostName = rm-bp1bnya92i3f45h33.mysql.rds.aliyuncs.com
+dbBackUp.userName = zdzcjcfw
+dbBackUp.passwd = zdzc@2017
+dbBackUp.sourceDbName = gps_main
+dbBackUp.destinationPath = C:\\dbBackUp
