--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -51,4 +51,9 @@ custom.datasource.gps_alarm_1.password=zdzc@2017
 #custom.datasource.gps_2.password=zdzc@2017
 
 
-
+#\u6570\u636E\u5E93\u5907\u4EFD\u914D\u7F6E\u53C2\u6570
+dbBackUp.hostName = rm-bp1bnya92i3f45h33o.mysql.rds.aliyuncs.com
+dbBackUp.userName = zdzcjcfw
+dbBackUp.passwd = zdzc@2017
+dbBackUp.sourceDbName = gps_main
+dbBackUp.destinationPath = C:\\dbBackUp
